# openApiGenerator/docs/routes/auth/paymentPix/getById.js
@@ -1,42 +1,40 @@
 module.exports = {
-    "/auth/payment/pix/{id}": {
-        "get": {
-            "summary": "Get by id",
-            "deprecated": false,
-            "description": "",
-            "tags": [
-                "Payments Pix"
-            ],
-            "parameters": [
-                {
-                    "name": "id",
-                    "in": "path",
-                    "description": "",
-                    "required": true,
-                    "example": "",
-                    "schema": {
-                        "type": "string"
-                    }
+    "get": {
+        "summary": "Get by id",
+        "deprecated": false,
+        "description": "",
+        "tags": [
+            "Payments Pix"
+        ],
+        "parameters": [
+            {
+                "name": "id",
+                "in": "path",
+                "description": "",
+                "required": true,
+                "example": "",
+                "schema": {
+                    "type": "string"
                 }
-            ],
-            "responses": {
-                "201": {
-                    "description": "",
-                    "headers": {}
-                },
-                "400": {
-                    "description": "",
-                    "headers": {}
-                }
+            }
+        ],
+        "responses": {
+            "201": {
+                "description": "",
+                "headers": {}
             },
-            "security": [
-                {
-                    "BearerAuth": []
-                },
-                {
-                    "ApiKeyAuth": []
-                }
-            ]
-        }
-    },
+            "400": {
+                "description": "",
+                "headers": {}
+            }
+        },
+        "security": [
+            {
+                "BearerAuth": []
+            },
+            {
+                "ApiKeyAuth": []
+            }
+        ]
+    }
 }
